<resources>
    <string name="app_name">BigC-Connect</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enterYourEmail">Enter your email address</string>
    <string name="enterEmailDescription">You will use this to sign into BigC-Connect and if you ever need to reset your password</string>
    <string name="signIn"><u>Sign In</u></string>
    <string name="forgotPassword"><u>Forgot Password?</u></string>
    <string name="signUp"><u>New User?</u></string>
    <string name="login">Log In</string>
    <string name="continueText">Continue</string>
    <string name="whatYourName">What is your name?</string>
    <string name="whatYourNameDescription">This can be a screen name or your real name whatever you feel comfortable with.</string>
    <string name="createPassword">Create a password?</string>
    <string name="createPasswordDescription">This must be at least letters. For better security use numbers and letters.</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="supporterSelection">Are you a Fighter, Survivor or Supporter?</string>
    <string name="addProfilePicText">Add a profile picture of yourself or something meaningful.</string>
    <string name="takeAPhoto">Take a photo</string>
    <string name="chooseFromGallery">Choose from Gallery</string>
    <string name="selectYourRibbon">Select your ribbon</string>
    <string name="pleaseSelect">Please select</string>
    <string name="setupRemainderText">Set up the remainder of your profile.</string>
    <string name="stage">Stage</string>
    <string name="stageHint">1, 2, 3, 4</string>
    <string name="type">Type</string>
    <string name="typeHint">HER 2 or N/A</string>
    <string name="location">Location</string>
    <string name="locationHint">Country</string>
    <string name="publicProfile">Public Profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="publicText">Public</string>
    <string name="privateText">Private</string>
    <string name="onText">On</string>
    <string name="offText">Off</string>
    <string name="setupRemainderDescription">A public profile is one that will allow other survivors to find and support you.</string>
    <string name="searchSurvivorDescription">Search for your survivor by their screen name. You should have received this in your invitation to join BigC-Connect. If not, reach out to your survivor to find out what this is. You can skip this step and add them later if need be.</string>
    <string name="inviteSupportersOrSurvivors">Invite other Supporters or Fighters and Survivors</string>
    <string name="inviteSupportersDescription">Invite friends and families to support a survivor or invite a survivor to BigC-Connect platform. Once a survivor sets up their profile, supporters will be able to search for the profile and add it to their supporting list. A survivor can approve or disapprove a supporter to their circle.</string>
    <string name="inviteSurvivorsDescription">Invite friends and families to support you. Once a survivor sets up their profile, they will be able to search for a survivor profile and add it to their supporting list. A survivor can approve or disapprove a supporter to their circle.</string>
    <string name="skip">Skip</string>
    <string name="selectMedium">Please select medium to invite supporters.</string>
    <string name="bySMS">SMS</string>
    <string name="byEmail">Email</string>
    <string name="emailEmpty">Email empty</string>
    <string name="invalidEmail">Invalid email address</string>
    <string name="passwordEmpty">Password empty</string>
    <string name="tooShortPassword">Too short password, Password must contains 6 characters.</string>
    <string name="invalidCredentials">Invalid credentials, Please try again</string>
    <string name="forgotPasswordTitle">Forgot Password</string>
    <string name="forgotPasswordDescription">Enter your email, we will send you your password</string>
    <string name="sendPassword">Send Password</string>
    <string name="supporterVisibilityTitle">Let other survivors find you by your ribbon.</string>
    <string name="finish">Finish</string>
    <string name="survivorSearchTitle">Find the survivor\nyou want to support.</string>
    <string name="search">Search</string>
    <string name="inviteIntentSurvivor">Invite Survivors</string>
    <string name="inviteIntentSupporter">Invite Supporters</string>
    <string name="invitationSubject">Invitation to BigC-Connect</string>
    <string name="invitationSurvivorToSupporterBody1">Hi,\nI would like to invite you to download the beta version of the BigC-Connect application. BigC-Connect is a unique platform for cancer survivors and supporters. During the signup process you will need to search for the screen name I use on the platform to connect with me. This is</string>
    <string name="invitationSurvivorToSupporterBody2">You can download from here, Android: https://play.google.com/store/apps/details?id=com.bigc_connect iOS: https://itunes.apple.com/us/app/bigc-connect/id975256828. As this is a beta, please do report any issues you may come across while using the platform. You can do this in the top menu on both IOS and Android, and go to \"Report a problem\" link.\nLook forward to connecting with you there.</string>
    <string name="invitationSupporterToSupporterBody1">Hi,\nI would like to invite you to download the BigC-Connect application. BigC-Connect is a unique platform for cancer survivors and supporters. During the signup process you will need to search for the screen name the connected survivor uses on the platform. This is</string>
    <string name="invitationSupporterToSupporterBody2">You can download from here, Android: https://play.google.com/store/apps/details?id=com.bigc_connect iOS: https://itunes.apple.com/us/app/bigc-connect/id975256828. As this is a beta, please do report any issues you may come across while using the platform. You can do this in the top menu on both IOS and Android, and go to \"Report a problem\" link.\nLook forward to connecting with you there.</string>
    <string name="more">More</string>
    <string name="posts">Posts</string>
    <string name="photos">Photos</string>
    <string name="supporters">Supporters</string>
    <string name="supporting">Supporting</string>
    <string name="logout">Log Out</string>
    <string name="logoutNow">Log out now?</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="addaTribute">Add a tribute</string>
    <string name="photo">Photo</string>
    <string name="newsfeed">NewsFeed</string>
    <string name="newsfeedDescription">Cancer news from around the world</string>
    <string name="books">Books</string>
    <string name="booksDescription">Informations, stories and books on Cancer</string>
    <string name="videos">Videos</string>
    <string name="videosDescription">Cancer related Youtube videos</string>
    <string name="survivorStories">Survivor\nStories</string>
    <string name="tributes">Tributes</string>
    <string name="broadcasts">Broadcasts</string>
    <string name="messages">Messages</string>
    <string name="addastory">Add a story</string>
    <string name="oldPassword">Old Password</string>
    <string name="enterPassword">Enter Password</string>
    <string name="enterNewPassword">Enter new password</string>
    <string name="retypeNewPassword">Retype new password</string>
    <string name="reset">Reset</string>
    <string name="resetPassword">Reset Password</string>
    <string name="upgradeForNoAds">Upgrade to Ad-Free</string>
    <string name="reportAProblem">Report a Problem</string>
    <string name="wrongOldPassword">Old passwor is wrong</string>
    <string name="passwordMismatch">Password mismatch</string>
    <string name="passwordChangedSuccessful">Password has been changed</string>
    <string name="operationFailed">Operation failed, Please try again</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="findSurvivors">Find Survivors</string>
    <string name="inviteSurvivors">Invite Survivors</string>
    <string name="inviteSupporters">Invite Supporters</string>
    <string name="networkFailureMessage">Unable to reach server, check your internet connection.</string>
    <string name="noFeedMessage">No one has posted from your BigC-Connections. Be the first by selecting the update or photo links from the navigation below.</string>
    <string name="noTributeMessage">No one has posted a tribute yet. If you would like to, select \"Add a tribute\" from the navigation.</string>
    <string name="noStoriesMessage">No one has posted a story yet. If you would like to, select \"Add a story\" from the navigation.</string>
    <string name="noPostAvailable">No post available</string>
    <string name="noPhotoAvailable">No photo available</string>
    <string name="noUpdatesPostedYet">No updates posted yet</string>
    <string name="noPhotosPostedYet">No photos posted yet</string>
    <string name="loadingRequests">Loading Requests</string>
    <string name="loadingTributes">Loading Tributes</string>
    <string name="loadingVideos">Loading Videos</string>
    <string name="loadingBooks">Loading Books</string>
    <string name="loadingComments">Loading Comments</string>
    <string name="loadingSurvivors">Loading Survivors</string>
    <string name="loadingFeeds">Loading Feeds</string>
    <string name="loadingNews">Loading News</string>
    <string name="loadingMessages">Loading Messages</string>
    <string name="loadingStories">Loading Stories</string>
    <string name="loadingPhotos">Loading Photos</string>
    <string name="connectionRequests">Connection Requests</string>
    <string name="confirm">Confirm</string>
    <string name="decline">Decline</string>
    <string name="loadingSupporters">Loading Supporters</string>
    <string name="loadingSupporting">Loading Supporting</string>
    <string name="post">Post</string>
    <string name="to">To:</string>
    <string name="shareYourThoughts">Share your thoughts....</string>
    <string name="shareYourTribute">Share your tribute....</string>
    <string name="sendPersonalMessage">Send personal message....</string>
    <string name="shareYourStory">Share your story....</string>
    <string name="commentOnThisPhoto">Comment on this photo....</string>
    <string name="done">Done</string>
    <string name="bigcConnections">BigC-Connections</string>
    <string name="adMobBannerUnitID">ca-app-pub-8827399882084075/9494667144</string>
    <string name="delete">Delete</string>
    <string name="deletePost">Delete Post</string>
    <string name="deletePostMessage">Are you sure you want to permanently remove this post from BigC-Connect?</string>
    <string name="deleteTribute">Delete Tribute</string>
    <string name="deleteTribtueMessage">Are you sure you want to permanently remove this tribute from BigC-Connect?</string>
    <string name="deleteStory">Delete Story</string>
    <string name="deleteStoryMessage">Are you sure you want to permanently story this post from BigC-Connect?</string>
    <string name="flagInappropriate">Flag as inappropriate</string>
    <string name="edit">Edit</string>
    <string name="send">Send</string>
    <string name="NoSupporterMessage">You currently don\'t have any supporters, invite them via the \"Connections\" tab.</string>
    <string name="NoSupportingMessage">You are currently not supporting anyone, click on the connections tab to do so.</string>
    <string name="messagesSplash">Send private messages to your\nfighter, supporters and\nsurvivor BigC-Connections</string>
    <string name="exploreSplash">Explore curated content from News,\n Books and YouTube Video sites.\nShare Survivor and Tribute stories</string>
</resources>