<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="10" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/enterPassword"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/editTextVerticalPadding"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="@dimen/editTextVerticalPadding"
            android:textSize="@dimen/normalTextSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/grey"
                android:gravity="center"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/continueBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/buttonBackground"
                android:gravity="center"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/continueText"
                android:textColor="@color/white"
                android:textSize="@dimen/buttonTextSize"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/forgotPasswordOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/forgotPassword"
            android:textColor="@color/white"
            android:textSize="@dimen/normalTextSize" />
    </LinearLayout>

</LinearLayout>