<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/bottomOptionsParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:id="@+id/leftBottomOption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/buttonTextSize"
                android:layout_marginTop="2dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_pen" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/messages"
                android:textColor="@color/white"
                android:textSize="@dimen/buttonTextSize" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomOptionsParent"
        ads:adSize="BANNER"
        ads:adUnitId="@string/adMobBannerUnitID"
        android:background="@color/white" />

    <TextView
        android:id="@+id/splashTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/background"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp"
        android:text="@string/messagesSplash"
        android:textColor="@color/white" />

    <com.costum.android.widget.PullToRefreshListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adView"
        android:layout_below="@id/splashTextView"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/lightGrey"
        android:divider="@null" />

    <LinearLayout
        android:id="@+id/messageViewParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adView"
        android:layout_below="@id/splashTextView"
        android:layout_marginTop="@dimen/margin"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progressView"
            style="@android:style/Widget.ProgressBar"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/messageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/loadingRequests" />
    </LinearLayout>

</RelativeLayout>