<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/splashTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/exploreSplash"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3" >

            <LinearLayout
                android:id="@+id/newsParent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <ImageView
                        android:id="@+id/newsIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:src="@drawable/ic_news" />

                    <TextView
                        android:id="@+id/newsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:text="@string/newsfeed"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/newsDescriptionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="2"
                        android:maxLines="2"
                        android:paddingTop="2dp"
                        android:text="@string/newsfeedDescription"
                        android:textSize="@dimen/dateTextSize" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/shadow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/booksParent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp" >

                    <ImageView
                        android:id="@+id/booksIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_book" />

                    <TextView
                        android:id="@+id/booksText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:text="@string/books"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/booksDescriptionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="2"
                        android:maxLines="2"
                        android:paddingTop="2dp"
                        android:text="@string/booksDescription"
                        android:textSize="@dimen/dateTextSize" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/shadow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/videosParent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <ImageView
                        android:id="@+id/videosIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_videos" />

                    <TextView
                        android:id="@+id/videosText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:text="@string/videos"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/videosDescriptionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lines="2"
                        android:maxLines="2"
                        android:paddingTop="2dp"
                        android:text="@string/videosDescription"
                        android:textSize="@dimen/dateTextSize" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/shadow" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2" >

            <LinearLayout
                android:id="@+id/storiesParent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/storiesIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_user_stories" />

                    <TextView
                        android:id="@+id/storiesText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:text="@string/survivorStories"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/shadow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tributeParent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/tributeIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_candle" />

                    <TextView
                        android:id="@+id/tributeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:singleLine="true"
                        android:text="@string/tributes"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/shadow" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/adMobBannerUnitID"
            android:background="@color/white" />
    </LinearLayout>

</LinearLayout>